# idris-codegen-sexp

./: .gitignore  LICENSE  README.md  idris-codegen-sexp.cabal  stack.yaml
main/: Main.hs
src/Codegen/: SExp.hs
test/: HLint.hs  Spec.hs
test/cases/: HelloWorld.sexp
