name:                idris-codegen-sexp
version:             0.1.0.0
synopsis:            Idris Simplified Expression backend
homepage:            https://github.com/bamboo/idris-codegen-sexp#readme
license:             BSD3
license-file:        LICENSE
author:              Rodrigo B. de Oliveira
maintainer:          rbo@acm.org
copyright:           2018 Rodrigo B. de Oliveira
category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  default-language:  Haskell2010
  ghc-options:      -Wwarn -fwarn-incomplete-patterns -fwarn-unused-imports
  hs-source-dirs:    src
  exposed-modules:   Codegen.SExp
  build-depends:     base >= 4.7 && <5
                   , containers
                   , dlist
                   , idris
                   , mtl
                   , text
                   , text-generic-pretty
                   , wl-pprint-text


executable idris-codegen-sexp
  default-language:  Haskell2010
  ghc-options:      -threaded -rtsopts -funbox-strict-fields -O2 -Wwarn -fwarn-incomplete-patterns -fwarn-unused-imports
  hs-source-dirs:    main
  main-is:           Main.hs
  build-depends:     base >= 4.7 && <5
                   , directory
                   , filepath
                   , idris
                   , mtl
                   , text
                   , idris-codegen-sexp


test-suite spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options: -auto-all -caf-all
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base
                  , bytestring
                  , filepath
                  , idris
                  , idris-codegen-sexp
                  , tasty
                  , tasty-golden
                  , text


test-suite hlint
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hlint
  hs-source-dirs:   test
  main-is:          HLint.hs


source-repository head
  type:     git
  location: https://github.com/bamboo/idris-codegen-sexp
